--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -11,9 +11,10 @@ CREATED AND DESIGNED BY -:
         margin: 0px;
         /* font-family: 'Open Sans Condensed', sans-serif !important; */
         /* background-color: black !important; */
-        background-image: url(../images/wp37411.jpg);
+        background-image: url(../images/background.png);
         background-attachment: fixed;
         background-repeat: no-repeat;
+        background-size: cover;    
     }
     *{
       box-sizing: border-box;
@@ -62,20 +63,77 @@ CREATED AND DESIGNED BY -:
     #c1{
         background-color: black !important;
         color: white !important;
-        font-size: 1.2em ;
+        font-size: 1.4em ;
         padding: 0.4% 1% !important;
+        /* border: 1px solid white; */
         }
-
+#c11{
+    box-shadow: 0 18px 16px -10px rgba(0,0,0,.4);
+    border: 1px solid white;
+    background-color: grey;
+    color: #fff !important;
+  
+}
     #search{
         margin-left: 38%;
-        margin-top: 24%;
+        margin-top: 38%;
 
     }
     #searchbtn{   
         margin-left: 54%;
         margin-top: 8%;
+        color: white;
+        border: 3px solid white;
 
     }
     #search{
         padding:1.5%;
+    }
+    
+    .navbar-expand-lg .navbar-collapse{
+        margin-top: -1.8%;
+        margin-right: 1.6% !important;
+    }
+
+
+    .dropbtn {
+        /* box-shadow: 0 18px 16px -10px rgba(0,0,0,.4);
+        border: 1px solid white;
+        background-color: grey;
+        color: #fff !important; */
+        
+      }
+      
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+      
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;        
+      }
+      
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+        box-shadow: 0 18px 16px -10px rgba(0,0,0,.4);
+        border: 1px solid white;
+       
+      }
+      
+      .dropdown-content a:hover {background-color: #ddd;}
+      
+      .dropdown:hover .dropdown-content {display: block;}
+      
+      .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+    #modal3{
+        margin-top: 12% !important;
     }
