--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -137,5 +137,7 @@ CREATED AND DESIGNED BY -:
     #modal3{
         margin-top: 12% !important;
     }
-
-   
+#coaching{
+    overflow: auto;
+    height: 450%;
+}
